fix: lots of loc fixes and adjustments to vault scaling

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -1096,14 +1096,14 @@
 	concept_tec_specialist_job_tec_netrunner_enforcer_icon: "£job_tec_netrunner_enforcer£ $job_tec_netrunner_enforcer$"
 	concept_tec_specialist_job_tec_netrunner_enforcer_plural: "$job_tec_netrunner_enforcer_plural$"
 	concept_tec_specialist_job_tec_netrunner_enforcer_plural_icon: "£job_tec_netrunner_enforcer£ $job_tec_netrunner_enforcer_plural$"
-	concept_tec_specialist_job_tec_netrunner_enforcer_desc: "§L$job_tec_netrunner_enforcer_desc$§!\n\n$job_tec_netrunner_enforcer_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_produces$:\n\n"
+	concept_tec_specialist_job_tec_netrunner_enforcer_desc: "§L$job_tec_netrunner_enforcer_desc$§!\n\n$job_tec_netrunner_enforcer_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_enforcers_alias_icon']\n$tec_loc_c_effect_cat$: ['concept_tec_effect_enforcer_alias_icon']\n\n$tec_loc_crime$: §G-30§!\n$tec_loc_stability$: §G+1§!\nIf non-Megacorp:\n$t$$tec_loc_amenities$: §R-2§!\nIf Megacorp:\n$t$$tec_loc_trade_value$: §R-2§!\n$tec_loc_c_produces$: §Y£physics_research£ 4 £engineering_research£ 2§!"
 
 	concept_tec_specialist_job_tec_netrunner_criminal: "$job_tec_netrunner_criminal$"
 	concept_tec_specialist_job_tec_netrunner_criminal_alias: "$job_tec_netrunner_criminal$"
 	concept_tec_specialist_job_tec_netrunner_criminal_icon: "£job_tec_netrunner_criminal£ $job_tec_netrunner_criminal$"
 	concept_tec_specialist_job_tec_netrunner_criminal_plural: "$job_tec_netrunner_criminal_plural$"
 	concept_tec_specialist_job_tec_netrunner_criminal_plural_icon: "£job_tec_netrunner_criminal£ $job_tec_netrunner_criminal_plural$"
-	concept_tec_specialist_job_tec_netrunner_criminal_desc: "§L$job_tec_netrunner_criminal_desc$§!\n\n$job_tec_netrunner_criminal_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_produces$:\n\n"
+	concept_tec_specialist_job_tec_netrunner_criminal_desc: "§L$job_tec_netrunner_criminal_desc$§!\n\n$job_tec_netrunner_criminal_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_criminals_alias_icon']\n\n$tec_loc_crime$: §R+5§!\n$tec_loc_c_produces$: §Y£physics_research£ 6 £engineering_research£ 3§!"
 
 	concept_tec_specialist_job_tec_naval_operator_drone: "$job_tec_naval_operator_drone$"
 	concept_tec_specialist_job_tec_naval_operator_drone_alias: "$job_tec_naval_operator_drone$"
@@ -1263,14 +1263,14 @@
 	concept_tec_worker_job_tec_memorialist_icon: "£job_tec_memorialist£ $job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_plural: "$job_tec_memorialist_plural$"
 	concept_tec_worker_job_tec_memorialist_plural_icon: "£job_tec_memorialist£ $job_tec_memorialist_plural$"
-	concept_tec_worker_job_tec_memorialist_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_worker$§!\n$tec_loc_c_produces$:\n\n"
+	concept_tec_worker_job_tec_memorialist_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias_icon']\n\n$tec_loc_amenities$: §R-1§!\n$tec_loc_c_produces$: §Y£unity£ 3 £society_research£ 1§!"
 
 	concept_tec_worker_job_tec_memorialist_corporate: "$job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_corporate_alias: "$job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_corporate_icon: "£job_tec_memorialist£ $job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_corporate_plural: "$job_tec_memorialist_plural$"
 	concept_tec_worker_job_tec_memorialist_corporate_plural_icon: "£job_tec_memorialist£ $job_tec_memorialist_plural$"
-	concept_tec_worker_job_tec_memorialist_corporate_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc_corporate$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_worker$§!\n$tec_loc_c_produces$:\n\n"
+	concept_tec_worker_job_tec_memorialist_corporate_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc_corporate$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias_icon']\n\n$tec_loc_trade_value$: §R-1§!\n$tec_loc_c_produces$: §Y£unity£ 3 £society_research£ 1§!"
 
 	concept_tec_worker_job_tec_labrat: "$job_tec_labrat$"
 	concept_tec_worker_job_tec_labrat_alias: "$job_tec_labrat$"
