--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -97,7 +97,7 @@
 		# Based on agenda_gestalt_purge_traits
 		council_agenda_agenda_tec_genetic_ascendancy_name:0 "Epigenetic Restoration"
 		council_agenda_agenda_tec_genetic_ascendancy_desc:0 "Genetic malformation and undesirable biological development are things we must overcome; with our dexterity in genetics and our genetic repository we can repair and improve those who lead us forward."
-		council_agenda_agenda_tec_genetic_ascendancy_effect_desc:0 "Removes §HNegative Traits§! from Organic Leaders.\n$tec_loc_ruler$ and $tec_loc_council_members$ are prioritized.\nFor each Trait removed, lose §R500§! experience (reduced by the §HEpigenetic Restoration Effectivity§!)."
+		council_agenda_agenda_tec_genetic_ascendancy_effect_desc:0 "Removes §HNegative Traits§! from Organic Leaders.\n$tec_loc_ruler$ and $tec_loc_council_members$ are prioritized.\nFor each §YTrait§! removed, lose §R[tec_epigenetic_restoration_exp_cost_per_trait]§! Experience (reduced by the §H$mod_tec_epigenetic_restoration_mult$§!).\nEffects applied to §G[tec_epigenetic_restoration_leader_count]§! $tec_loc_leaders$"
 		# Levels
 			council_agenda_agenda_tec_genetic_ascendancy_tier_1:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G1§! $tec_loc_leader$§!"
 			council_agenda_agenda_tec_genetic_ascendancy_tier_2:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G2§! $tec_loc_leaders$§!"
@@ -110,6 +110,7 @@
 		agenda_tec_genetic_ascendancy_desc:0 "$council_agenda_agenda_tec_genetic_ascendancy_desc$"
 
 		mod_tec_epigenetic_restoration_mult:0 "Epigenetic Restoration Effectivity"
+        mod_tec_epigenetic_restoration_leader_count: "Epigenetic Restoration Leaders on Agenda"
 
 		council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_name:0 "Consolidated Infrastructure"
 		council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_desc:0 "Streamlining the vital areas of our empire with advanced systems and infrastructure, ensuring peak performance and efficiency where it matters most."
