Several fixes and recombination situation rebalance

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -813,13 +813,12 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
  # Agenda
 	council_agenda_agenda_tec_genetic_recombination_name:0 "Recombination Overdrive"
 	council_agenda_agenda_tec_genetic_recombination_desc:0 "By increasing our efforts towards recombination of positive trait and genetic conditions, we can greatly improve our overall efficiency and provide better results."
-	council_agenda_agenda_tec_genetic_recombination_regular_tooltip:0 "£tec_genetics_icon£ $job_tec_gene_recombinator_plural$ contribution towards £stability£ $situation_tec_ascension_genetic_recombination$ situation: §Y+50%§!"
-	council_agenda_agenda_tec_genetic_recombination_gestalt_tooltip:0 "£tec_genetics_icon£ $job_tec_gene_recombinator_drone_plural$ contribution towards £stability£ $situation_tec_ascension_genetic_recombination$ situation: §Y+50%§!"
+	council_agenda_agenda_tec_genetic_recombination_regular_tooltip:0 "£tec_genetics_icon£ $job_tec_gene_recombinator_plural$ contribution towards $tec_loc_situation_icon$ $situation_tec_ascension_genetic_recombination$ situation: §Y+50%§!"
+	council_agenda_agenda_tec_genetic_recombination_gestalt_tooltip:0 "£tec_genetics_icon£ $job_tec_gene_recombinator_drone_plural$ contribution towards $tec_loc_situation_icon$ $situation_tec_ascension_genetic_recombination$ situation: §Y+50%§!"
 	modifier_tec_agenda_tec_genetic_recombination_finish:0 "$council_agenda_agenda_tec_genetic_recombination_name$ $agenda_ref$"
 	modifier_tec_agenda_tec_genetic_recombination_finish_desc:0 "$council_agenda_agenda_tec_genetic_recombination_desc$"
 
 	tec_agenda_require_no_active_recombination_or_cd:0 "TODO ASCENSION"
-
 
 	decision_tec_genetic_recombination:0 "£tec_genetics_icon£ Start Recombination"
 	decision_tec_genetic_recombination_desc:0 "Local genetic facilities are prepared to start the reanalysis of potential genetic traits, allowing the enhancement of our species as a whole."
@@ -2940,28 +2939,63 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
  # /
 
  # --------------- Buildings
-	building_tec_psychic_shrine:0 "TO DO"
-	building_tec_psychic_shrine_plural:0 "TO DO"
-	building_tec_psychic_shrine_desc:0 "TO DO"
+	building_tec_regular_psychic_beacon:0 "Mind Beacon"
+	building_tec_regular_psychic_beacon_plural:0 "$building_tec_regular_psychic_beacon$s"
+	building_tec_regular_psychic_beacon_desc:0 "An important installation where psychic energies are studied, redirected and coalesced from a large scale and population; the air around it can be felt charged with energy."
+
+	building_tec_hive_psychic_beacon:0 "Psynaptic Spire"
+	building_tec_hive_psychic_beacon_plural:0 "$building_tec_hive_psychic_beacon$s"
+	building_tec_hive_psychic_beacon_desc:0 "This constructed towering structure accumulates all the psychic potential of the collective and coalesce it."
+
+	building_tec_cyberhive_psychic_beacon:0 "Psychic Amplifier"
+	building_tec_cyberhive_psychic_beacon_plural:0 "$building_tec_cyberhive_psychic_beacon$s"
+	building_tec_cyberhive_psychic_beacon_desc:0 "A colossal structure that serves as a relay for the psycho-cybernetic transmissions of the collective."
+
+	building_tec_biohive_psychic_beacon:0 "Psychic Organelle"
+	building_tec_biohive_psychic_beacon_plural:0 "$building_tec_biohive_psychic_beacon$s"
+	building_tec_biohive_psychic_beacon_desc:0 "Growing tall and imposing, this organic structure resonates with the incredible psychic energies it amasses fro mthe collective presence."
  # /
 
  # --------------- Jobs
-	job_tec_psychic_augmented:0 "Augmented"
-	job_tec_psychic_augmented_plural:0 "Augmented"
-	job_tec_psychic_augmented_desc:0 "These individuals have reached such a deep level of psychic powers they are able to defy the known, and potentially unknown, limits of reality."
-	job_tec_psychic_augmented_effect_desc:0 "£job_tec_psychic_augmented£ $job_tec_psychic_augmented_plural$ TO DO."
-	mod_job_tec_psychic_augmented_add:0 "$job_tec_psychic_augmented$ Jobs"
-	mod_job_tec_psychic_augmented_per_pop:0 "§G+1§! $job_tec_psychic_augmented$ Job per $VALUE$ Pops"
-	mod_job_tec_psychic_augmented_per_pop_short:0 "\n§G+1§! £mod_job_tec_psychic_augmented_add£ per $VALUE$ £pop£"
+	job_tec_psychic_psyker:0 "Psyker"
+	job_tec_psychic_psyker_plural:0 "Psykers"
+	job_tec_psychic_psyker_desc:0 "These individuals have reached such a deep level of psychic powers they are able to defy the known, and potentially unknown, limits of reality."
+	job_tec_psychic_psyker_effect_desc:0 "£job_tec_psychic_psyker£ $job_tec_psychic_psyker_plural$ $todo_new_ascension$."
+	mod_job_tec_psychic_psyker_add:0 "$job_tec_psychic_psyker$ Jobs"
+	mod_job_tec_psychic_psyker_per_pop:0 "§G+1§! $job_tec_psychic_psyker$ Job per $VALUE$ Pops"
+	mod_job_tec_psychic_psyker_per_pop_short:0 "\n§G+1§! £mod_job_tec_psychic_psyker_add£ per $VALUE$ £pop£"
 
-	job_tec_psychic_augmented_drone:0 "Augmented Drone"
-	job_tec_psychic_augmented_drone_plural:0 "Augmented Drone"
-	job_tec_psychic_augmented_drone_desc:0 "These drones have been gifted with high part of the collective psychic capacities, developing the capacity of being able to defy the known, and potentially unknown, limits of reality."
-	job_tec_psychic_augmented_drone_effect_desc:0 "£job_tec_psychic_augmented_drone£ $job_tec_psychic_augmented_drone_plural$ TO DO."
-	mod_job_tec_psychic_augmented_drone_add:0 "$job_tec_psychic_augmented_drone$ Jobs"
-	mod_job_tec_psychic_augmented_drone_per_pop:0 "§G+1§! $job_tec_psychic_augmented_drone$ Job per $VALUE$ Pops"
-	mod_job_tec_psychic_augmented_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_psychic_augmented_drone_add£ per $VALUE$ £pop£"
+	job_tec_psychic_priest:0 "Prescient Seer"
+	job_tec_psychic_priest_plural:0 "Prescient Seers"
+	job_tec_psychic_priest_desc:0 "Consecrated towards a life of study and knowledge, these clergy members study the natural powers of the mind and how they rely to their faith, and how to elevate both."
+	job_tec_psychic_priest_effect_desc:0 "£job_tec_psychic_priest£ $job_tec_psychic_priest_plural$ $todo_new_ascension$."
+	mod_job_tec_psychic_priest_add:0 "$job_tec_psychic_priest$ Jobs"
+	mod_job_tec_psychic_priest_per_pop:0 "§G+1§! $job_tec_psychic_priest$ Job per $VALUE$ Pops"
+	mod_job_tec_psychic_priest_per_pop_short:0 "\n§G+1§! £mod_job_tec_psychic_priest_add£ per $VALUE$ £pop£"
 
+	job_tec_psychic_researcher:0 "Psychic Analyzer"
+	job_tec_psychic_researcher_plural:0 "Psychic Analyzers"
+	job_tec_psychic_researcher_desc:0 "Highly powerful and dedicated investigators that try to study how to obtain the maximum potential of mental prowess and power."
+	job_tec_psychic_researcher_effect_desc:0 "£job_tec_psychic_researcher£ $job_tec_psychic_researcher_plural$ $todo_new_ascension$."
+	mod_job_tec_psychic_researcher_add:0 "$job_tec_psychic_researcher$ Jobs"
+	mod_job_tec_psychic_researcher_per_pop:0 "§G+1§! $job_tec_psychic_researcher$ Job per $VALUE$ Pops"
+	mod_job_tec_psychic_researcher_per_pop_short:0 "\n§G+1§! £mod_job_tec_psychic_researcher_add£ per $VALUE$ £pop£"
+
+	job_tec_psychic_drone:0 "Psyker Drone"
+	job_tec_psychic_drone_plural:0 "Augmented Drone"
+	job_tec_psychic_drone_desc:0 "These drones have been gifted with high part of the collective psychic capacities, developing the capacity of being able to defy the known, and potentially unknown, limits of reality."
+	job_tec_psychic_drone_effect_desc:0 "£job_tec_psychic_drone£ $job_tec_psychic_drone_plural$ TO DO."
+	mod_job_tec_psychic_drone_add:0 "$job_tec_psychic_drone$ Jobs"
+	mod_job_tec_psychic_drone_per_pop:0 "§G+1§! $job_tec_psychic_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_psychic_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_psychic_drone_add£ per $VALUE$ £pop£"
+
+	tec_psyker_army:0 "Psychic Phalanx"
+	tec_psyker_army_plural:0 "Psychic Phalanxes"
+	tec_psyker_army_desc:0 "A group of elite psykers trained for direct combat approaches using the extreme power contained within their psyche, unleashing reality-altering destructive waves upon their foes, or diminishing their minds until they are under their control."
+
+	tec_psyker_army_gestalt:0 "Psychic Horde"
+	tec_psyker_army_gestalt_plural:0 "Psychic Hordes"
+	tec_psyker_army_gestalt_desc:0 "A massive psychically connected swarm of combat drones, coordinated with an efficiency never seen, unleashing reality altering waves around their path and upon their foes, diminishing their minds until surrender is the only option."
  # /
 
  # --------------- AP 2
@@ -2985,6 +3019,24 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
  # /
 # /
 
+
+# ------------------------------------------------- Biopsychic
+	job_tec_biopsychic_augmented:0 "Augmented"
+	job_tec_biopsychic_augmented_plural:0 "Augmented"
+	job_tec_biopsychic_augmented_desc:0 "These individuals have reached such a deep level of psychic powers they are able to defy the known, and potentially unknown, limits of reality."
+	job_tec_biopsychic_augmented_effect_desc:0 "£job_tec_psychic_augmented£ $job_tec_psychic_augmented_plural$ TO DO."
+	mod_job_tec_biopsychic_augmented_add:0 "$job_tec_biopsychic_augmented$ Jobs"
+	mod_job_tec_biopsychic_augmented_per_pop:0 "§G+1§! $job_tec_biopsychic_augmented$ Job per $VALUE$ Pops"
+	mod_job_tec_biopsychic_augmented_per_pop_short:0 "\n§G+1§! £mod_job_tec_biopsychic_augmented_add£ per $VALUE$ £pop£"
+
+	job_tec_biopsyker_drone:0 "Augmented Drone"
+	job_tec_biopsyker_drone_plural:0 "Augmented Drone"
+	job_tec_biopsyker_drone_desc:0 "These drones have been gifted with high part of the collective psychic capacities, developing the capacity of being able to defy the known, and potentially unknown, limits of reality."
+	job_tec_biopsychic_augmented_drone_effect_desc:0 "£job_tec_biopsychic_augmented_drone£ $job_tec_biopsychic_augmented_drone_plural$ TO DO."
+	mod_job_tec_biopsychic_augmented_drone_add:0 "$job_tec_biopsychic_augmented_drone$ Jobs"
+	mod_job_tec_biopsychic_augmented_drone_per_pop:0 "§G+1§! $job_tec_biopsychic_augmented_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_biopsychic_augmented_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biopsychic_augmented_drone_add£ per $VALUE$ £pop£"
+# /
 
 
 # ------------------------------------------------- Auth mechanics dump
