--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -2000,6 +2000,25 @@ l_english:
 	mod_job_tec_broodlord_drone_per_pop:0 "§G+1§! $job_tec_broodlord_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_broodlord_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_broodlord_drone_add£ per $VALUE$ £pop£"
  # /
+ # ------------------------------------------------- Splicer Queens
+	job_tec_splicer_queen_drone:0 "Splicer Queen"
+	job_tec_splicer_queen_drone_plural:0 "$job_tec_splicer_queen_drone$s"
+	job_tec_splicer_queen_drone_desc:0 "A caste of highly specialized brood drones that spawn and modify wave after wave of drone breeds; While doing so, it alters the genes of the new breeds so they are more specialized towards the desired tasks."
+	job_tec_splicer_queen_drone_effect_desc:0 "£job_tec_splicer_queen_drone£ $job_tec_splicer_queen_drone_plural$ convert $tec_loc_basic_resources$ into §Y$tec_loc_organic_assembly$§!, and provide a §Y£job£ Production bonus§! depending on the $tec_loc_planet_designation$. These effects scale with the $tec_loc_capital_tier$."
+	job_tec_splicer_queen_drone_effect_desc_growth:0 "£job_tec_splicer_queen_drone£ $job_tec_splicer_queen_drone_plural$ convert $tec_loc_basic_resources$ into §Y$tec_loc_pop_growth$§!, and provide a §Y£job£ Production bonus§! depending on the $tec_loc_planet_designation$. These effects scale with the $tec_loc_capital_tier$."
+	mod_job_tec_splicer_queen_drone_add:0 "$job_tec_splicer_queen_drone$ Jobs"
+	mod_job_tec_splicer_queen_drone_per_pop:0 "§G+1§! $job_tec_splicer_queen_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_splicer_queen_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_splicer_queen_drone_add£ per $VALUE$ £pop£"
+
+	job_tec_splicer_empress_drone:0 "Splicer Empress"
+	job_tec_splicer_empress_drone_plural:0 "$job_tec_splicer_empress_drone$s"
+	job_tec_splicer_empress_drone_desc:0 "The pinnacle of the brood designation and waving, this highly evolved splicer queen is able to convey the sheer altering capacities of the collective into the different breeds processed."
+	job_tec_splicer_empress_drone_effect_desc:0 "£job_tec_splicer_empress_drone£ $job_tec_splicer_empress_drone_plural$ convert $tec_loc_basic_resources$ into §Y$tec_loc_organic_assembly$§!, and provide a §Y£job£ Production bonus§! depending on the $tec_loc_planet_designation$. These effects scale with the $tec_loc_capital_tier$ and $tec_loc_planet_ascension$, and get partially transmitted to other Splicer Queens."
+	job_tec_splicer_empress_drone_effect_desc_growth:0 "£job_tec_splicer_empress_drone£ $job_tec_splicer_empress_drone_plural$ convert $tec_loc_basic_resources$ into §Y$tec_loc_pop_growth$§!, provide a §Y£job£ Production bonus§! depending on the $tec_loc_planet_designation$ and boost the other £job_tec_splicer_queen_drone£ $job_tec_splicer_queen_drone_plural$ in the empire. These effects scale with the $tec_loc_capital_tier$ and $tec_loc_planet_ascension$"
+	mod_job_tec_splicer_empress_drone_add:0 "$job_tec_splicer_empress_drone$ Jobs"
+	mod_job_tec_splicer_empress_drone_per_pop:0 "§G+1§! $job_tec_splicer_empress_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_splicer_empress_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_splicer_empress_drone_add£ per $VALUE$ £pop£"
+
  # ------------------------------------------------- Cerebrates
 	job_tec_cerebrate_drone:0 "Cerebrate Drone"
 	job_tec_cerebrate_drone_plural:0 "Cerebrate Drones"
