--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -442,7 +442,7 @@
 
 	trait_tec_coactive:0 "Coactive"
 	trait_tec_coactive_desc:0 "§LWhen it comes to organization, development and unitary processes, this species shine like no other, using collaborative and effective ways to maximize the efficiency at any cost.§!"
-	trait_tec_coactive_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£unity£ Administrator Output§! on the planet by §G+$@trait_tec_coactive_boost_rate_tt$%§!, and §YAdministrator Upkeep§! by §R+$@trait_tec_coactive_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@trait_tec_coactive_boost_ascension_tt$%§! more per researched $tec_loc_technology$.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	trait_tec_coactive_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£unity£ Administrator Output§! on the planet by §G+$@trait_tec_coactive_boost_rate_tt$%§!, and §YAdministrator Upkeep§! by §R+$@trait_tec_coactive_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@trait_tec_coactive_boost_ascension_tt$%§! more per active $tec_loc_ascension_perk$.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 # /
 
 
@@ -822,7 +822,7 @@
 
 	trait_tec_gene_will_t3:0 "§YResolved§! (§HIII§!)"
 	trait_tec_gene_will_t3_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
-	trait_tec_gene_will_t3_effect:0 "$MOD_ARMY_ATTACK_MORALE_MULT$: §G+30%§!\n$MOD_ARMY_DEFENSE_MORALE_MULT$: §G+30%§!\n$mod_planet_jobs_unity_produces_mult$: §G+30%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_will_t3_effect:0 "Army Morale: §G+50%§!\n$mod_planet_jobs_unity_produces_mult$: §G+30%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	trait_tec_gene_fertile_t1:0 "§YFecund§! (§GI§!)"
 	trait_tec_gene_fertile_t1_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
@@ -858,7 +858,7 @@
 
 	trait_tec_gene_audacious_t3:0 "§YAudacious§! (§HIII§!)"
 	trait_tec_gene_audacious_t3_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
-	trait_tec_gene_audacious_t3_effect:0 "$MOD_ARMY_ATTACK_MORALE_MULT$: §G+30%§!\n$MOD_ARMY_DEFENSE_DAMAGE_MULT$: §G+30%§!\n$mod_planet_jobs_specialist_only_produces_mult$: §G+15%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_audacious_t3_effect:0 "Army Damage: §G+50%§!\n$mod_planet_jobs_specialist_only_produces_mult$: §G+15%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 	# Lifespan
 	trait_tec_gene_lifespan_t1:0 "§YEternal§! (§GI§!)"
 	trait_tec_gene_lifespan_t1_desc:0 "§LThis organic species seems impervious to the pasage of time, literally not aging nor deteriorating due to age related illnesses or processes.§!"
