--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -789,6 +789,21 @@
 		concept_tec_ruler_job_tec_broodlord_drone_plural_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$"
 		concept_tec_ruler_job_tec_broodlord_drone_desc: "§L$job_tec_broodlord_drone_desc$§!\n\n$job_tec_broodlord_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
 
+		concept_tec_ruler_job_tec_splicer_empress_drone: "$job_tec_splicer_empress_drone$"
+		concept_tec_ruler_job_tec_splicer_empress_drone_alias: "$job_tec_splicer_empress_drone$"
+		concept_tec_ruler_job_tec_splicer_empress_drone_icon: "£job_tec_splicer_empress_drone£ $job_tec_splicer_empress_drone$"
+		concept_tec_ruler_job_tec_splicer_empress_drone_plural: "$job_tec_splicer_empress_drone_plural$"
+		concept_tec_ruler_job_tec_splicer_empress_drone_plural_icon: "£job_tec_splicer_empress_drone£ $job_tec_splicer_empress_drone_plural$"
+		concept_tec_ruler_job_tec_splicer_empress_drone_desc: "§L$job_tec_splicer_empress_drone_desc$§!\n\n$job_tec_splicer_empress_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+
+		concept_tec_ruler_job_tec_splicer_queen_drone: "$job_tec_splicer_queen_drone$"
+		concept_tec_ruler_job_tec_splicer_queen_drone_alias: "$job_tec_splicer_queen_drone$"
+		concept_tec_ruler_job_tec_splicer_queen_drone_icon: "£job_tec_splicer_queen_drone£ $job_tec_splicer_queen_drone$"
+		concept_tec_ruler_job_tec_splicer_queen_drone_plural: "$job_tec_splicer_queen_drone_plural$"
+		concept_tec_ruler_job_tec_splicer_queen_drone_plural_icon: "£job_tec_splicer_queen_drone£ $job_tec_splicer_queen_drone_plural$"
+		concept_tec_ruler_job_tec_splicer_queen_drone_desc: "§L$job_tec_splicer_queen_drone_desc$§!\n\n$job_tec_splicer_queen_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+
+
 		concept_tec_ruler_job_tec_overmind_drone: "$job_tec_overmind_drone$"
 		concept_tec_ruler_job_tec_overmind_drone_alias: "$job_tec_overmind_drone$"
 		concept_tec_ruler_job_tec_overmind_drone_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone$"
