--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -820,24 +820,29 @@
 	tr_tec_bioware_finish:0 "$tradition_tec_bioware$ Traditions Finished"
 	tr_tec_bioware_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
 
-	tr_tec_bioware_1:0 "REPLACE_ME"
-	tr_tec_bioware_1_delayed:0 "REPLACE_ME"
-	tr_tec_bioware_1_tooltip:0 "REPLACE_ME"
-	tr_tec_bioware_2:0 "REPLACE_ME"
-	tr_tec_bioware_2_delayed:0 "REPLACE_ME"
-	tr_tec_bioware_2_tooltip:0 "REPLACE_ME"
-	tr_tec_bioware_3:0 "REPLACE_ME"
-	tr_tec_bioware_3_delayed:0 "REPLACE_ME"
+	tr_tec_bioware_1:0 "Naturomimetic Printing"
+	tr_tec_bioware_1_delayed:0 "Every single fiber of bionic augmentations is tailored with natural design and ergonomics in mind, fusing with the host in an indistinguishable way."
+	tr_tec_bioware_1_tooltip:0 "$todo_new_ascension$ Species points add species picks add"
+
+	tr_tec_bioware_2A:0 "Synaptic Synchronization"
+	tr_tec_bioware_2A_delayed:0 "Synthetic neural pathways seamlessly connecting with natural nerves and connectors will solidify the body-bionic synchronization, making them totally integrated and streamlined."
+	tr_tec_bioware_2A_tooltip:0 "$todo_new_ascension$"
+
+	tr_tec_bioware_2B:0 "Neurocompatibilization"
+	tr_tec_bioware_2B_delayed:0 "External systems connect"
+	tr_tec_bioware_2B_tooltip:0 "$todo_new_ascension$"
+
+	tr_tec_bioware_3:0 "Metabolic Recycling"
+	tr_tec_bioware_3_delayed:0 "Supplementary management systems will reuse redundant resources produced by the bionic host to minimize external load and print on-demand internal structures or work for reparations."
 	tr_tec_bioware_3_tooltip:0 "REPLACE_ME"
-	tr_tec_bioware_4:0 "REPLACE_ME"
+
+	tr_tec_bioware_4:0 "Bionic Adaptation"
 	tr_tec_bioware_4_delayed:0 "REPLACE_ME"
-	tr_tec_bioware_4_tooltip:0 "REPLACE_ME"
-	tr_tec_bioware_5:0 "REPLACE_ME"
-	tr_tec_bioware_5_delayed:0 "REPLACE_ME"
-	tr_tec_bioware_5_tooltip:0 "REPLACE_ME"
-	tr_tec_bioware_6:0 "REPLACE_ME"
-	tr_tec_bioware_6_delayed:0 "REPLACE_ME"
-	tr_tec_bioware_6_tooltip:0 "REPLACE_ME"
+	tr_tec_bioware_4_tooltip:0 "$todo_new_ascension$ Unlocks bioware traits, bioware traits increase their effects based on existing organic traits - can be added to robotic traits and they would boost eachother"
+
+	tr_tec_bioware_5:0 "$todo_new_ascension$"
+	tr_tec_bioware_5_delayed:0 "$todo_new_ascension$"
+	tr_tec_bioware_5_tooltip:0 "$todo_new_ascension$"
  # /
 
  # Automation TODO (B)
@@ -942,72 +947,46 @@
 	tradition_tec_psychics_desc:0 "Our mind is our foundation, whose pillars are constituted in our will - We are many, but we are one, we don't need external forces but our sheer mental power to guide us."
 
 	tr_tec_psychics_adopt:0 "$tradition_tec_psychics$ Traditions"
-	tr_tec_psychics_adopt_tooltip:0 "TO DO."
+	tr_tec_psychics_adopt_tooltip:0 "$todo_new_ascension$Unlocks the sheer mental potential of your species, making them gain the ['trait:trait_tec_psychic_main'] trait.\nAllows the use of the §YPsychic Harmonization§! agenda on the council."
 	# Unlocks the psychic potential of 
 
 	tr_tec_psychics_finish:0 "$tradition_tec_psychics$ Traditions Finished"
-	tr_tec_psychics_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
+	tr_tec_psychics_finish_tooltip:4 "$todo_new_ascension$Allows the species modification of Psychic species with ['concept_tec_psychic_alterations'], which are special traits bound to the influence of the amplified mind over their bodies.\n\n$TRADITIONS_FINISH_AP$"
 	# Unlocks psychic harmonization/disruption rituals, which alters reality based on the empire decisions.
 
-	tr_tec_psychics_1:0 "Unlocked Potential"
-	tr_tec_psychics_1_delayed:0 "to do"
-	tr_tec_psychics_1_tooltip:0 "TO DO"
+	tr_tec_psychics_1:0 "Open horizon"
+	tr_tec_psychics_1_delayed:0 "Imagination is just another frontier for us, it's time to venture into the unknown."
+	tr_tec_psychics_1_tooltip:0 "$todo_new_ascension$"
 
-	tr_tec_psychics_1_hivemind:0 "Collective Psyche"
-	tr_tec_psychics_1_hivemind_delayed:0 "to do"
-	tr_tec_psychics_1_hivemind_tooltip:0 "TO DO"
+	tr_tec_psychics_2:0 "Endless Potential"
+	tr_tec_psychics_2_delayed:0 "We have awakened just a glimpse of what we truly can do, we just need to have the will to unleash it further."
+	tr_tec_psychics_2_tooltip:0 "$todo_new_ascension$"
 
-	tr_tec_psychics_2:0 "Materialized Will"
-	tr_tec_psychics_2_delayed:0 "to do"
-	tr_tec_psychics_2_tooltip:0 "TO DO"
+	tr_tec_psychics_2_hivemind:0 "Endless Psyche"
+	tr_tec_psychics_2_hivemind_delayed:0 "An infinite chorus manifested as a single voice, all eternally bound to the greatest end."
+	tr_tec_psychics_2_hivemind_tooltip:0 "$todo_new_ascension$"
 
-	tr_tec_psychics_3:0 "Overreaching Thoughts"
-	tr_tec_psychics_3_delayed:0 "to do"
-	tr_tec_psychics_3_tooltip:0 "TO DO"
+	tr_tec_psychics_3:0 "Entangled Vision"
+	tr_tec_psychics_3_delayed:0 "AAll is connected, our minds, the worlds... reality itself is an eternal web."
+	tr_tec_psychics_3_tooltip:0 "$todo_new_ascension$Allows the construction of §Y$tec_loc_building_icon$ Mind Beacons§!, which provide §Y§! per capital level, and per §Y$tec_loc_planet_ascension$§! (§G+1§! per each §Y4§!)\nPsychic pops produce 1 Willpower."
 
-	tr_tec_psychics_3_hivemind:0 "Mind Beacons"
-	tr_tec_psychics_3_hivemind_delayed:0 "to do"
-	tr_tec_psychics_3_hivemind_tooltip:0 "TO DO"
+	tr_tec_psychics_3_hive:0 "Entangled Connection"
+	tr_tec_psychics_3_hive_delayed:0 "We can see the threads connecting our minds, realities, existence... and we will learn how to weave them."
+	tr_tec_psychics_3_hive_tooltip:0 "$todo_new_ascension$"
 
-	tr_tec_psychics_4:0 "REPLACE_ME"
+	tr_tec_psychics_4:0 "SPLIT INTO TWO"
 
-	tr_tec_psychics_4A:0 "Gazing into the Abyss"
+	tr_tec_psychics_4A:0 "Inner Infinity"
 	tr_tec_psychics_4A_delayed:0 "to do"
 	tr_tec_psychics_4A_tooltip:0 "TO DO"
 
-	tr_tec_psychics_4A_hivemind:0 "One with the Abyss"
-	tr_tec_psychics_4A_hivemind_delayed:0 "to do"
-	tr_tec_psychics_4A_hivemind_tooltip:0 "TO DO"
-
-	tr_tec_psychics_4B:0 "Transmaterial Vision"
+	tr_tec_psychics_4B:0 "Infinite Gaze"
 	tr_tec_psychics_4B_delayed:0 "to do"
 	tr_tec_psychics_4B_tooltip:0 "TO DO"
 
-	tr_tec_psychics_4B_hivemind:0 "Transmaterial Connection"
-	tr_tec_psychics_4B_hivemind_delayed:0 "to do"
-	tr_tec_psychics_4B_hivemind_tooltip:0 "TO DO"
-
-	tr_tec_psychics_5:0 "Open Horizon"
-	tr_tec_psychics_5_delayed:0 "to do"
-	tr_tec_psychics_5_tooltip:0 "TO DO"
-
-		tr_tec_psychics_5A:0 "Dark Side of the Mind"
-		tr_tec_psychics_5A_delayed:0 "to do"
-		tr_tec_psychics_5A_tooltip:0 "TO DO"
-
-		tr_tec_psychics_5A_hivemind:0 "Shadow in the Mind"
-		tr_tec_psychics_5A_hivemind_delayed:0 "to do"
-		tr_tec_psychics_5A_hivemind_tooltip:0 "TO DO"
-
-		tr_tec_psychics_5B:0 "Endless Mind"
-		tr_tec_psychics_5B_delayed:0 "to do"
-		tr_tec_psychics_5B_tooltip:0 "TO DO"
-
-		tr_tec_psychics_5B_hivemind:0 "Endless Minds"
-		tr_tec_psychics_5B_hivemind_delayed:0 "to do"
-		tr_tec_psychics_5B_hivemind_tooltip:0 "TO DO"
-
-	tr_tec_psychics_6:0 "REPLACE_ME"
+	tr_tec_psychics_5:0 "Transreality"
+	tr_tec_psychics_5_delayed:0 "We see, we feel, we know; realities coalescing into ours, ready to be shaped with a single thought."
+	tr_tec_psychics_5_tooltip:0 "$todo_new_ascension$Allows the use of the Transreality edict, which allows the coalescence of Psychic willpower into different elements.\nThe higher the cost and complexity of a Transreality manifestation, the higher the risk involved."
 
 	# Neut rituals
 		# Manifestation of Nature - Creates a space storm on each system with a Psychic relay built on a starbase
