feat: support for key in efficiency inlines

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -338,6 +338,9 @@
 	tec_loc_hc_unlock_mega: "§HUnlocks Megastructure:§!"
 	tec_loc_hc_unlock_trait: "§HUnlocks Trait:§!"
 
+	tec_loc_from_orbital_building_key: "From Orbital Ring Buildings"
+	tec_loc_from_starbase_building_key: "From Starbase Buildings"
+
 # Situations and text icons
 # ------------------------------------------------------------
 	tec_icon_text_path_good:0 "This can lead to a §GPositive§! path."
