psy and hive civics prep

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -436,7 +436,7 @@
 	trait_tec_pollinators_effect:0 "$tec_identity_trait$\n\n$tec_loc_food$ from £job_farmer£ $job_farmer_plural$: §G+$@trait_tec_pollinators_food_job_add$§!\nEach $tec_loc_pop$ increase the $tec_loc_food$ Output on the planet by §G+$@tec_pollinators_food_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for Organic ['concept_tec_effect_livestock_alias_icon']§!"
 
 	trait_tec_technophile:0 "Technophiles"
-	trait_tec_technophile_desc:0 "§LThe need of technological process has driven these organics to consecrate their lives to the discovery of new ways of advance, with rational thinking and scientific ideas as their main.§!"
+	trait_tec_technophile_desc:0 "§LThe need of technological process has driven these organics to consecrate their lives to the discovery of new ways of advance, with rational thinking and scientific ideas as their main motivation.§!"
 	trait_tec_technophile_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£job_researcher£ Researcher Output§! on the planet by §G+$@trait_tec_technophile_boost_rate_tt$%§!, and §YResearcher Upkeep§! by §R+$@trait_tec_technophile_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@trait_tec_technophile_boost_techs_tt$%§! more per $tec_loc_technology$ researched.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 	#Each $tec_loc_pop$ will provide §G1§! $tec_loc_unity$ instantly after a research is completed
 
