--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -956,7 +956,7 @@
 
 	tr_tec_psychics_1:0 "Open horizon"
 	tr_tec_psychics_1_delayed:0 "Imagination is just another frontier for us, it's time to venture into the unknown."
-	tr_tec_psychics_1_tooltip:0 "$todo_new_ascension$"
+	tr_tec_psychics_1_tooltip:0 "$todo_new_ascension$Allows the construction of §Y$tec_loc_building_icon$ Mind Beacons§!, which provide §Y§! per capital level, and per §Y$tec_loc_planet_ascension$§! (§G+1§! per each §Y4§!)\nPsychic pops produce 1 Willpower."
 
 	tr_tec_psychics_2:0 "Endless Potential"
 	tr_tec_psychics_2_delayed:0 "We have awakened just a glimpse of what we truly can do, we just need to have the will to unleash it further."
@@ -967,8 +967,8 @@
 	tr_tec_psychics_2_hivemind_tooltip:0 "$todo_new_ascension$"
 
 	tr_tec_psychics_3:0 "Entangled Vision"
-	tr_tec_psychics_3_delayed:0 "AAll is connected, our minds, the worlds... reality itself is an eternal web."
-	tr_tec_psychics_3_tooltip:0 "$todo_new_ascension$Allows the construction of §Y$tec_loc_building_icon$ Mind Beacons§!, which provide §Y§! per capital level, and per §Y$tec_loc_planet_ascension$§! (§G+1§! per each §Y4§!)\nPsychic pops produce 1 Willpower."
+	tr_tec_psychics_3_delayed:0 "All is connected, our minds, the worlds... reality itself is an eternal web to explore."
+	tr_tec_psychics_3_tooltip:0 "$todo_new_ascension$"
 
 	tr_tec_psychics_3_hive:0 "Entangled Connection"
 	tr_tec_psychics_3_hive_delayed:0 "We can see the threads connecting our minds, realities, existence... and we will learn how to weave them."
@@ -977,11 +977,11 @@
 	tr_tec_psychics_4:0 "SPLIT INTO TWO"
 
 	tr_tec_psychics_4A:0 "Inner Infinity"
-	tr_tec_psychics_4A_delayed:0 "to do"
+	tr_tec_psychics_4A_delayed:0 "The potential bound to our very existence is evergrowing, and we yearn for more, and more, and more..."
 	tr_tec_psychics_4A_tooltip:0 "TO DO"
 
 	tr_tec_psychics_4B:0 "Infinite Gaze"
-	tr_tec_psychics_4B_delayed:0 "to do"
+	tr_tec_psychics_4B_delayed:0 "Reflections now shows something different, reflections now show an eternal and infinite answer to a question we have yet to make."
 	tr_tec_psychics_4B_tooltip:0 "TO DO"
 
 	tr_tec_psychics_5:0 "Transreality"
