amenity negative trait tooltip fix

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -68,11 +68,11 @@
 
 	trait_tec_amenities_fragile:0 "Fragile"
 	trait_tec_amenities_fragile_desc:0 "§LThe way these organisms operate involve several specific caretaking and monitoring to avoid injuries, illness or mental ill-being, as they tend to fall into those with ease.§!"
-	trait_tec_amenities_fragile_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_fragile_amenities_add$§!\nArmy Damage: §R$@trait_tec_amenities_fragile_army_rate_tt$%§!"
+	trait_tec_amenities_fragile_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_fragile_amenities_add$§!\nArmy Health: §R$@trait_tec_amenities_fragile_army_rate_tt$%§!"
 
 	trait_tec_amenities_diminished:0 "Diminished"
 	trait_tec_amenities_diminished_desc:0 "§LWhile not physically weak per se, this species require of extreme measures, practices and conditioning for surviving, as its organism is inherently difficult to maintain and prone to physical and mental illnesses.§!"
-	trait_tec_amenities_diminished_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_diminished_amenities_add$§!\nArmy Damage: §R$@trait_tec_amenities_diminished_army_rate_tt$%§!"
+	trait_tec_amenities_diminished_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_diminished_amenities_add$§!\nArmy Health: §R$@trait_tec_amenities_diminished_army_rate_tt$%§!"
 
 	# CG upkeep
 	trait_tec_goods_upkeep_extreme:0 "Prodigal"
