fix: missing locs and modifiers, fix pasarti and theian initializers

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -2242,7 +2242,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	job_tec_state_worker:0 "Public Worker"
 	job_tec_state_worker_plural:0 "Public Workers"
 	job_tec_state_worker_desc:0 "Specifically hired by the government agencies as counter-unemployment measure, these employees are dedicated to a myriad of tasks for the better development of their society."
-	job_tec_state_worker_effect_desc:0 "£job_tec_state_worker£ $job_tec_state_worker_plural$ produce §G2§! §Y$tec_loc_unity$§! with §R1§! extra §Y$tec_loc_amenities$§! upkeep, serving the empire while waiting a job to be available"
+	job_tec_state_worker_effect_desc:0 "£job_tec_state_worker£ $job_tec_state_worker_plural$ produce §Y$tec_loc_unity$§! and consume §Y$tec_loc_amenities$ as upkeep, serving the empire while waiting a job to be available"
 	job_tec_state_worker_effect_desc_megacorp:0 "£job_tec_state_worker£ $job_tec_state_worker_plural$ produce §Y$tec_loc_unity$§! and §Y$tec_loc_trade_value$§! while having extra §Y$tec_loc_consumer_goods$§! upkeep, serving the empire until another job is filled."
 	mod_job_tec_state_worker_add:0 "$job_tec_state_worker$ Jobs"
 	mod_job_tec_state_worker_per_pop:0 "§G+1§! $job_tec_state_worker$ Job per $VALUE$ Pops"
