--- a/localisation/english/zz_evolved_categories_l_english.yml
+++ b/localisation/english/zz_evolved_categories_l_english.yml
@@ -67,6 +67,8 @@
 	planet_tec_peasants: "$job_tec_peasant_plural$ Jobs"
 	planet_tec_labrats: "$job_tec_labrat_plural$ Jobs"
 	planet_tec_necromancers: "$job_necromancer_plural$ Jobs"
+	planet_tec_gene_recombinators: "$job_tec_gene_recombinator_plural$ Jobs"
+	planet_tec_archivists: "$job_tec_minor_archivist_plural$ Jobs"
 
 	leader_rulers:0 "Rulers"
 	leader_envoys:0 "Envoys"
