fix: vd machine loc

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -9,8 +9,10 @@
 	IS_SAPIENT:0 "This Species is Sapient"
 # MISC replaces
 # ------------------------------------------------------------
-	CORPORATE_COUNTRY_MODIFIER:0 "£empire£§YCorporate Empire§! §EEffects§!"
-	COUNTRY_MODIFIER:0 "$EMPIRE_EFFECTS_W_ICON$"
+	CORPORATE_COUNTRY_MODIFIER:0 "£empire£§YBranch Office Owner§! §EEffects§!"
+	COUNTRY_MODIFIER:0 "§Y$tec_loc_planet$§! §EEffects§!"
+	PLANET_MODIFIER: "§Y$tec_loc_empire$§! §EEffects§!"
+	POP_MODIFIER: "§Y$tec_loc_pop$§! §EEffects§!"
 
 # GENERIC REPLACES
 # ------------------------------------------------------------
