--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -39,3 +39,6 @@ requires_ascension_perks_4:0 "$TRIGGER_FAIL$Requires 4 other Ascension Perks to 
 
  subject_tec_satellite_term: "This agreement counts as half of a §YSubject§! towards §Y$divided_patronage$§!"
  tec_overlord_is_apathic:0 "$TRIGGER_FAIL$§ROur empire does not care due to our $ethic_gestalt_apathy$§!"
+
+
+ TEC_NATURAL_DESIGN_BLOCKS_GENEMODDING: "$TRIGGER_FAIL$ Cannot modify nature's perfect creations"
