fix(T-1242 & more): fixed convergence when not enough pops, nerfed lodge ascension scaling, fixed swaps for penal and thrall colony

--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -4573,6 +4573,8 @@ todo_new_ascension:0 ""
 	MESSAGE_TEC_CONVERGENCE_MERGED_POPS_TITLE:0 "Ritual of Convergence"
 	MESSAGE_TEC_CONVERGENCE_MERGED_POPS:1 "A total of $VALUE|Y$ £pops£ Pops have successfully merged in a Convergence of Mind and Soul."
 
+	TEC_BIOPSIONIC_CONVERGENCE_NO_RECEPIENTS: "§R£trigger_no£ No available recipients for Convergence§!"
+
 	# --------------- Extra traits
 	# After doing a convergence
 	tec_biopsionic_path.360.name:0 "Convergent Worlds"
