--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -42,3 +42,4 @@ requires_ascension_perks_4:0 "$TRIGGER_FAIL$Requires 4 other Ascension Perks to 
 
 
  TEC_NATURAL_DESIGN_BLOCKS_GENEMODDING: "$TRIGGER_FAIL$ Cannot modify nature's perfect creations"
+ decision_penal_colony_only_one:0 "£trigger_no£ The §Y[Root.Owner.GetName]§! can only have one §Y$penal_colony$§!."
